	caused by tabulation.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed copying of fifo, socket and device files with 'syscalls' enabled.
	Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed compilation with musl.  Thanks to Svyatoslav Mishyn (a.k.a. juef).

	Fixed build on FreeBSD.  Thanks to bsdmp.

	Fixed not drawing local colorscheme once after setting global one.

0.7.8 to 0.8-beta

	Removed per-view last search pattern.  Don't worry, you probably won't
	even notice it: this doesn't affect regular use case, rather more exotic
	one, which is hard to notice.

	Map <c-h> and <bs> to different key codes.  Thanks to fogine.

	Added <lt> angle bracket notation (less-than character, '<').  Thanks to
	filterfalse.

	Added K mapping to Vim plugin (quick navigation to documentation, e.g.
	from vifmrc).  Patch by filterfalse.

	Aligned columns in :jobs menu.

	Added 'chaselinks' option to automatically expand all symbolic links in
	path of a view (might not work on Windows).  Thanks to filterfalse.

	Added %FOREGROUND FUSE mounting option, which supersedes %CLEAR and
	fixes issue with passing input to FUSE mounter.  Thanks to Johannes (a.k.a.
	johannesmeng).

	Added %[ and %] macros for statusline/ruler.  Thanks to ranousse.

	Added single-argument form of :file[x]type and :fileviewer commands that
	lists (in menu mode) currently registered patterns that match specified
	file name.

	Added filename specific highlight.  Thanks to Ink (a.k.a. inknoir),
	filterfalse and Michael Maddern (a.k.a. madders).

	Added dircolors -> vifm conversion script.  Thanks to Ink (a.k.a. inknoir),
	Hendrik Jaeger (a.k.a. henk) and Michael Maddern (a.k.a. madders).

	Added F key to less-like (file view) mode, which acts similar to `tail -F`
	or F key in less.  Thanks to Daniel Dettlaff (a.k.a. dmilith).

	Added 'mintimeout' option.  It enables controlling responsiveness on
	external events by Vifm.  Thanks to hofheinz.
